# opd

./: .gitignore  README.md
paperhound/: .gitignore  README.md  pyproject.toml
paperhound/eval_out/: dpo_preference.json  gpt-oss-20b-dpo_generations.jsonl  gpt-oss-20b-dpo_judged.jsonl  gpt-oss-20b-sft-dpo_generations.jsonl  gpt-oss-20b-sft-dpo_judged.jsonl  gpt-oss-20b_generations.jsonl  gpt-oss-20b_judged.jsonl  smollm2-135m-dpo_generations.jsonl  smollm2-135m-dpo_judged.jsonl  smollm2-135m-sft-dpo_generations.jsonl  smollm2-135m-sft-dpo_judged.jsonl  smollm2-135m_generations.jsonl  smollm2-135m_judge_summary.txt  smollm2-135m_judged.jsonl
paperhound/logs/: eval-sft-dpo.out
paperhound/scripts/: eval_cited_chunks.py  eval_dpo_preference.py  hf_env.sh  llm_judge.py  plot_training_log.py  prepare_dpo_data.py  prepare_verl_data.py  push_to_hf.py  rent_prime_pod.sh  reward_cited_chunks.py  run_pod_eval.sh  train_all.sh  train_dpo.py  train_dpo_130m.sh  train_dpo_gpt_oss_20b.sh  train_ppo_sglang_130m.sh  train_ppo_sglang_gpt_oss_20b.sh  train_sft_130m.sh  train_sft_gpt_oss_20b.sh
qwen3_tweet_style/: .gitignore  README.md  eval_benchmark.py  gen_opd_prompts.py  merge_adapter.py  plot_curves.py  prepare_opd_data.py  pyproject.toml  sft.py  train_qwen3_32b.py  train_qwen3_4b.py  tui.py
qwen3_tweet_style/data/: opd_prompts.jsonl
qwen3_tweet_style/scripts/: reward_zero.py  train_opd_4b.sh
t5_gsm8k/: .gitignore  README.md  eval_compare.py  plot_training_metrics.py  pyproject.toml  train.py  train_laptop_t5_gkd.py
t5_gsm8k/artifacts/: gkd_process.excalidraw  (+1 more)
(+4 files in other folders)
