[project]
name = "paperhound"
version = "0.1.0"
description = "verl + SGLang training scripts for paper retrieval and grounding"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "datasets>=3.0.0",
    "huggingface-hub>=0.26.0",
    "matplotlib>=3.8.0",
    "pandas>=2.2.0",
    "pyarrow>=16.0.0",
    "torch>=2.6.0",
    "transformers>=4.55.0",
    "verl[sglang]>=0.5.0",
    "sglang>=0.4.6",
]

[tool.uv]
prerelease = "allow"
