[project]
name = "t5-gsm8k"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.14"
dependencies = [
    "datasets>=4.8.5",
    "huggingface-hub>=1.17.0",
    "torch>=2.12.0",
    "tqdm>=4.67.3",
    "transformers>=5.9.0",
    "sentencepiece>=0.2.0",
    "protobuf>=5.0.0",
    "accelerate>=1.0.0",
    "tensorboard>=2.18.0",
]
